# cs112-lisp-js

./: .gitignore  LispJs.hs  README.md  TestLispJs.hs  USAGE  brainfuck.hs  cs112-lisp-js.cabal  functional.js  helperFunctions.js  helperFunctions.py  in.jsp  in.loki  main.hs  out.loki.html  out.loki.js  out.loki.py  test.html  tictactoe-js.loki  tictactoe-py.loki  tictactoe.html  tictactoe.loki.html  tictactoe.loki.js  tictactoe.py  ttt.loki.kv  ttt.loki.py
Python TicTacToe/: TicTacToe.kv  main.py
src/: Eval.hs  LispJs.hs  LispPy.hs  LokiJS.hs  LokiPY.hs  Parser.hs  Utils.hs  brainfuck.hs  helperFunctions.js  helperFunctions.py  main.hs
test/: TestLispJs.hs  TestLispPy.hs  TestLokiJS.hs  TestLokiPY.hs  TestMain.hs  TestUtils.hs
tests/: class-object.convert.js.expected  class-object.convert.py.expected  class-object.exec.js.expected  class-object.exec.py.expected  class-object.loki  class-object.out.js  class-object.out.py  class-object.parse.js.expected  class-object.parse.py.expected  complex.exec.js.expected  complex.loki  complex.out.js  complex.out.py  complex.py.expected  def+fn.convert.js.expected  def+fn.convert.py.expected  def+fn.exec.js.expected  def+fn.exec.py.expected  def+fn.loki  def+fn.out.js  def+fn.out.py  def+fn.parse.js.expected  def+fn.parse.py.expected  helpers.convert.js.expected  helpers.convert.py.expected  helpers.exec.js.expected  helpers.exec.py.expected  helpers.js.expected  helpers.loki  helpers.out.js  helpers.out.py  helpers.parse.js.expected  helpers.parse.py.expected  helpers.py.expected  literals.convert.js.expected  literals.convert.py.expected  literals.exec.js.expected  literals.exec.py.expected  literals.loki  literals.out.js  (+30 more)
ttt-loki-js/: ttt-base.html  ttt-js.loki  ttt-js.loki.html  ttt-js.loki.html.js
ttt-loki-py/: TicTacToe.kv  ttt-py.loki  ttt.loki.py
