name:                cs112-lisp-js
version:             0.1.0.0
author:              Anthony D'Ambrosio
maintainer:          nsa.anthony@gmail.com
homepage:            https://github.com/Pancia/cs112-lisp-js
license:             MIT
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable cs112-lisp-js
    main-is: main.hs
    Hs-Source-Dirs: src, .
    build-depends: base == 4.*,
                   parsec == 3.*,
                   transformers == 0.4.*,
                   containers == 0.5.*,
                   process == 1.*,
                   mtl == 2.*
    default-language: Haskell2010

Test-suite test-lisp-js
    Hs-Source-Dirs:       test, ., src
    Main-Is:              TestLispJs.hs
    Type:                 exitcode-stdio-1.0
    Build-Depends:        base >= 4 && < 5,
                          test-framework,
                          test-framework-hunit,
                          test-framework-quickcheck2,
                          HUnit, QuickCheck,
                          parsec == 3.*,
                          transformers == 0.4.*,
                          containers == 0.5.*,
                          process == 1.*,
                          mtl == 2.*
    default-language: Haskell2010
