name:                loki-lang
version:             0.1.0.0
author:              Anthony D'Ambrosio
maintainer:          nsa.anthony@gmail.com
homepage:            https://github.com/Pancia/loki-lang
license:             MIT
license-file:        LICENSE
category:            Language
build-type:          Simple
cabal-version:       >=1.10
synopsis:            A lisp compiler down to multiple languages (js, py)
description:         A compiler from lisp to (js, py)

source-repository head
  type:     git
  location: https://github.com/Pancia/loki-lang

executable cs112-lisp-js
    main-is: main.hs
    Hs-Source-Dirs: src, .
    build-depends: base == 4.*,
                   parsec == 3.*,
                   transformers == 0.4.*,
                   containers == 0.5.*,
                   process == 1.*,
                   mtl == 2.*
    default-language: Haskell2010

Test-suite test-lisp-js
    Hs-Source-Dirs:       test, ., src
    Main-Is:              TestMain.hs
    Type:                 exitcode-stdio-1.0
    Build-Depends:        base >= 4 && < 5,
                          test-framework,
                          test-framework-hunit,
                          test-framework-quickcheck2,
                          HUnit, QuickCheck,
                          parsec == 3.*,
                          transformers == 0.4.*,
                          containers == 0.5.*,
                          process == 1.*,
                          mtl == 2.*, turtle, system-filepath, text, foldl
    default-language: Haskell2010
